--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "type": "module",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "nodemon": "*"
+  },
+  "name": "zoo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
