--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemon": "*"
+    "nodemon": "^3.1.0"
   },
   "name": "zoo",
   "version": "1.0.0",
